Unit test passes